--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,7 @@
-<div class="mx-auto md:w-2/3 w-full flex post">
-  <%= link_to  posts_path do %>
-      <i class="fa-solid fa-arrow-left text-white text-2xl"></i>
-  <%end %>
-  <div class="mx-autorow">
-    <%= render @post %>
+<div class="pl-56">
+  <div class="mx-auto md:w-2/3 w-full flex post">
+    <div class="mx-autorow">
+      <%= render @post %>
+    </div>
   </div>
 </div>
