--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,8 +1,8 @@
 <div id="<%= dom_id post %>" class="post p-4">
   <div class="flex items-center text-white ">
-    <%= link_to user_path(post.user.username) do%>
+    <%= link_to user_profile_path(post.user.username) do%>
       <%= image_tag post.user.avatar_url ? post.user.avatar_url : 'notfoundimg.jpg', class: "w-10 h-10 rounded-full mr-4" %>
-      <a><%= t('.view_profile', username: post.user.username) %></a>
+      <%= t('.view_profile', username: post.user.username) %>
     <% end %>
   </div>
   <div class="flex items-center justify-between">
@@ -15,7 +15,7 @@
       <% end %>
     <% end %>
   </div>
-  <div class="flex justify-center w-full border-2 border-slate-500 rounded-lg">
+  <div class="flex justify-center w-full border-2 border-slate-500 rounded-lg mt-2">
     <%= link_to post do %>
       <%= image_tag post.photo, width: 700 if post.photo.attached?  %>
     <% end %>
@@ -38,22 +38,6 @@
       <%= link_to "#{hashtag.name}", hashtag_path(hashtag), class:"text-white" %>
     <% end %>
   </p>
-  <% unless action_name == "index" %>
-    <h2>Comentarios</h2>
-    <% if post.comments.any? %>
-      <% post.comments.each do |comment| %>
-        <div class="comment">
-          <p><strong><%= comment.user.username %>:</strong> <%= comment.content %></p>
-        </div>
-      <% end %>
-    <% else %>
-      <p>No hay comentarios.</p>
-    <% end %>
-  
-    <%= form_with(model: [post, Comment.new], url: post_comments_path(post), method: :post) do |form| %>
-      <%= form.text_area :content, placeholder: "Agregar comentario...", class: "w-full" %>
-      <%= form.submit "Publicar Comentario" %>
-    <% end %>
-  <% end %>
+    <%= render partial:"posts/comments" %>
   <hr class="mt-6">
 </div>
