--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,9 +1,11 @@
-<div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl"><%= t('.edit')%></h1>
-  <%= link_to  posts_path do %>
-    <i class="fa-solid fa-arrow-left text-white text-2xl"></i>
-  <%end %>
-  <div class="mx-autorow">
-    <%= render "form", post: @post %>
-  </div>
+<div class="pl-72">
+  <div class="mx-auto md:w-2/3 w-full">
+      <h1 class="font-bold text-4xl"><%= t('.edit')%></h1>
+      <%= link_to  posts_path do %>
+        <i class="fa-solid fa-arrow-left text-white text-2xl"></i>
+      <%end %>
+      <div class="mx-autorow">
+        <%= render "form", post: @post %>
+      </div>
+    </div>
 </div>
