--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,10 +1,12 @@
-<div class="mx-auto md:w-2/3 w-full flex post">
-  <h1 class="font-bold text-4xl text-white  "><%= t('.New')%></h1><br />
-  <%= link_to  posts_path do %>
-    <i class="fa-solid fa-arrow-left text-white text-2xl"></i>
-  <%end %>  
-  <div class="mx-autorow">
-    <%= render "form", post: @post %>
-      
-  </div>
-</div>
+<div class="pl-72">
+  <div class="mx-auto lg:w-[500px] w-full flex post">
+     <h1 class="font-bold text-4xl text-white mr-4"><%= t('.New')%></h1>
+     <%= link_to  posts_path do %>
+       <i class="fa-solid fa-arrow-left text-white text-2xl"></i>
+     <%end %>  
+     <div class="mx-autorow">
+       <%= render "form", post: @post %>
+         
+     </div>
+   </div>
+</div> 
