--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,30 +1,54 @@
-<div id=" chatroom_container">
-  <div id="side_panel">
-    <h5><%=current_user.username%> </h5>
-    <h4>Users</h4>
-    <%= turbo_stream_from "users" %>
-    <div id="users">
-      <%= render @users %>
-    </div>
-    
-    <h4>Rooms</h4>
-    <%= render 'layouts/new_room_form' %>
-    <%= turbo_stream_from "rooms" %>
-    <div id="rooms">
-      <%= render @rooms %>
-    </div>
-  </div>
-    <div id="room_container">
-      <% if @single_room %>
-      <div id=single_room">
-        <h4 class="text-center"><%= @user&.username || @single_room.name %></h4>
-        <%= turbo_stream_from @single_room %>
-        <div id=" messages">
-          <%= render @messages %>
-        </div>
-        <%= render 'layouts/new_message_form' %>
-        </div>
+<div class=" flex justify-between w-full p-4 lg:w-full overflow-y-auto pl-72 text-white h-screen">
+  <% if @single_room  %>
+    <div class="w-full h-full flex flex-col justify-between">
+      <div>
+        <h4 class="text-center uppercase fond-bold font-mono border-b-2 ">
+          <%= @user&.username || @single_room.name %>
+        </h4>
       </div>
-        <%end %>
+      <div>
+        <%= turbo_stream_from @single_room %>
+      </div>
+      <div class=" ">
+        <%= render @messages %>
+      </div>
+      <div>
+        <%= render 'layouts/new_message_form' %>
+      </div>
     </div>
+  <% end %>
+  <div class="flex justify-between text-white <%= !@single_room ? 'w-full' : 'w-1/3'%>">
+     <% unless @single_room %>
+      <div class="w-2/3 ">
+        <h1>Crea un Mensaje ya!</h1>
+      </div>
+    <%end %>
+      <div class=" border-l pl-4 border-blue-500 h-sreen flex flex-col overflow-y-scroll <%= !@single_room ? 'w-1/3' : 'w-full'%>">
+        <div class="">
+              <div class="mb-8">
+                <h1 class="uppercase fond-bold font-mono"><%=current_user.username%> </h1>
+              </div>
+              <div class="border-t py-4">
+                <h4 class="text-center items-center text-white base rounded-lg border-e-white shadow-md shadow-gray-500/50">Users</h4>
+                <div class="mt-6">
+                  <%= turbo_stream_from "users" %>
+                </div>
+                <div>
+                  <%= render 'rooms/users' %>
+                </div>
+              </div>
+        </div>
+        <div class="border-t py-4 border-white mt-4">
+            <h4 class="text-center items-center text-white base rounded-lg border-e-white shadow-md shadow-gray-500/50"><%= t('.Groups') %></h4>
+              <%= turbo_stream_from "rooms" %>
+            <div class="mt-6">
+              <%= render @rooms %>
+              <div class="mt-10">
+                <%= render 'layouts/new_room_form' %>
+              </div>
+            </div>
+          </div>
+      </div>
+  </div>
+
 </div>
