--- a/app/views/shared/_items_2.html.erb
+++ b/app/views/shared/_items_2.html.erb
@@ -1,35 +1,62 @@
 <div class="w-full flex-col">
     <% if current_user %>
-    <div>
-        <%= form_with url: users_path, method: :get do |form| %>
-                <%= form.text_field :query_text, 
-                    class:" flex w-full justify-center text-center mt-4 items-center base rounded-lg border-e-white shadow-md shadow-blue-500/50", 
-                    placeholder: t('.query_text'), 
-                    onChange: 'this.form.requestSubmit()', 
-                    value: params[:query_text] %>
-        <% end %>
-    </div>
-   <div class="flex justify-center text-center mt-4 items-center text-white base rounded-lg border-e-white shadow-md shadow-blue-500/50 cursor-pointer  "> 
-        <%= link_to  likes_path do %>
-            <span>
-                <i class="fa-regular fa-star"></i>
-                <%= t('.favorites')%>
-            </span>
-        <%end %>
-   </div>
-    
-    <div class="flex justify-center mt-4 text-center items-center text-white text-base rounded-lg border-e-white shadow-md shadow-blue-500/50 cursor-pointer  ">
-        <%= link_to rooms_path do %>
-            <span>
-                <i class="fa-regular fa-message"></i>
-                <%= t('.Chats')%>
-            </span>
-        <% end %>
-    </div>
-    <div class="flex justify-center mt-4 text-center items-center text-white text-base rounded-lg border-e-white shadow-md shadow-blue-500/50 cursor-pointer  " >
-        <%= link_to edit_user_registration_path do%>
-            <i class="fa-solid fa-gear cursor-pointer "></i> Ajustes 
-            <%end%>
-        <% end %>
-    </div>
+        <div>
+            <%= form_with url: users_path, method: :get do |form| %>
+                    <%= form.text_field :query_text, 
+                        class:" flex w-full justify-center text-center  items-center base rounded-lg border-e-white shadow-md shadow-blue-500/50 hover:text-blue-400", 
+                        placeholder: t('.query_text'), 
+                        onChange: 'this.form.requestSubmit()', 
+                        value: params[:query_text] %>
+            <% end %>
+        </div>
+        <div class="flex justify-center text-center mt-48 items-center text-white base rounded-lg border-e-white shadow-md shadow-blue-500/50 cursor-pointer hover:text-blue-400"> 
+            <%= link_to  likes_path do %>
+                <span>
+                    <i class="fa-regular fa-star"></i>
+                    <%= t('.favorites')%>
+                </span>
+            <%end %>
+        </div>
+        
+        <div class="flex justify-center mt-10 text-center items-center text-white text-base rounded-lg border-e-white shadow-md shadow-blue-500/50 cursor-pointer hover:text-blue-400">
+            <%= link_to rooms_path do %>
+                <span>
+                    <i class="fa-regular fa-message"></i>
+                    <%= t('.Chats')%>
+                </span>
+            <% end %>
+        </div>
+        <div class="flex justify-center mt-10 text-center items-center text-white text-base rounded-lg border-e-white shadow-md shadow-blue-500/50 cursor-pointer hover:text-blue-400">
+            <%= link_to notifications_path do %>
+                <span>
+                    <i class="fa-solid fa-bell "></i>
+                    <%= t('.Notifications')%>
+                </span>
+            <% end %>
+        </div>
+        <div class="flex justify-center mt-10 text-center items-center text-white text-base rounded-lg border-e-white shadow-md shadow-blue-500/50 cursor-pointer hover:text-blue-400" >
+            <%= link_to edit_user_registration_path do%>
+                <span>
+                    <i class="fa-solid fa-gear cursor-pointer "></i> 
+                    <%= t('.Settings')%>
+                </span>
+            <% end %>
+        </div>
+        <div class="flex justify-center mt-10 text-center items-center text-white text-base rounded-lg border-e-white shadow-md shadow-blue-500/50 cursor-pointer hover:text-blue-400">
+            <%= link_to posts_path do %>
+                <span>
+                    <i class="fa-solid fa-house"></i>
+                    <%= t('.home') %>
+                </span>
+            <%end %>
+        </div>
+        <div class="flex justify-center mt-10 text-center items-center text-white text-base rounded-lg border-e-white shadow-md shadow-blue-500/50 cursor-pointer hover:text-blue-400">
+            <%= link_to user_profile_path(current_user.username)  do %>
+                <span>
+                    <i class="fa-regular fa-user"></i>
+                    <%= t('.profile', username: current_user.username) %>
+                </span>
+            <%end %>
+        </div>
+    <% end %>
 </div>
