--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,13 @@
+<diV class="pl-72 w-full">
 <% if @users.any? %>
-  <% @users.each do |user| %>
-    <%= link_to user_path(user.username) do %>
-      <%= image_tag(user.avatar_url ? user.avatar_url : 'notfoundimg.jpg', class: "w-10 h-10 rounded-full mr-4 mt-4") %>
-      <span class="text-white"><%= t('.view_profile', username: user.username) %></span>
+    <% @users.each do |user| %>
+      <%= link_to user_profile_path(user.username) do %>
+        <%= image_tag(user.avatar_url ? user.avatar_url : 'notfoundimg.jpg', class: "w-10 h-10 rounded-full mr-4 mt-4") %>
+        <span class="text-white"><%= t('.view_profile', username: user.username) %></span>
+      <% end %>
+      <hr class="mt-6">
     <% end %>
-    <hr class="mt-6">
+  <% else %>
+      <p class="text-white"><%= t('.not_found_users') %></p>
   <% end %>
-<% else %>
-    <p class="text-white"><%= t('.not_found_users') %></p>
-<% end %>
+</diV>
