--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -2,19 +2,15 @@
     <h1 class="text-center text-2xl">Notificaciones</h1>
     <hr class="mt-6">
     <% if @notifications.any? %>
-        <% @notifications.each do |notification| %>
-            <div class="text-center mt-4">
-                <%= notification.sender.username %> <%= notification.message %>
-                <small><%= notification.created_at.strftime("%d/%m/%Y %H:%M") %></small>
-                <% if notification.post.present? %>
-                    <a class="underline-offset-2"><%= link_to "Ver post", post_path(notification.post)%></a>
-                <% end %>
-
-                       
-            </div>
-            <hr class="mt-6">
-        <% end %>
+      <% @notifications.each do |notification| %>
+        <div class="text-center mt-4 border rounded-lg p-4 bg-gray-800">
+          <p><strong><%= notification.sender.username %></strong> <%= notification.message %> <small>(<%= notification.created_at.strftime("%d/%m/%Y %H:%M") %>)</small></p>
+          <% if notification.post.present? %>
+            <p><a class="underline" href="<%= post_path(notification.post) %>">Ver post</a></p>
+          <% end %>
+        </div>
+      <% end %>
     <% else %>
-        <p class="text-center">No tienes notificaciones.</p>
+      <p class="text-center mt-4">No tienes notificaciones.</p>
     <% end %>
-</div>
+  </div>
