--- a/app/views/shared/_suggestions.html.erb
+++ b/app/views/shared/_suggestions.html.erb
@@ -6,7 +6,7 @@
                 <% unless user == current_user %>
                     <%= link_to user_profile_path(user.username) do%>
                         <div class="flex justify-center mt-4 border border-gray rounded-lg ">
-                            <%= image_tag user.avatar_url ? user.avatar_url : 'notfoundimg.jpg', class: "w-10 h-10 rounded-full mr-4" %>
+                            <%= image_tag user.avatar_url.presence ||  'notfoundimg.jpg', class: "w-10 h-10 rounded-full mr-4" %>
                             <%= t('.view_profile', username: user.username) %>
                         </div>
                     <% end %>
