--- a/app/views/users/show_profile.html.erb
+++ b/app/views/users/show_profile.html.erb
@@ -1,34 +1,36 @@
-<div class="pl-72">
-<div class="text-white "> 
+<div class="pl-72 w-[1100px] mr-4">
+  <div class="text-white "> 
     <div class=" justify-between">
-        <%= image_tag(@user.avatar_url ? @user.avatar_url : 'notfoundimg.jpg', class: "w-24 h-24 rounded-full mr-4 mt-4") %>
-        <h1> <%= @user.username %></h1>
-      <% if @user != current_user %>
-        <% unless current_user.followed_users.include?(@user) %>
-          <%= link_to "Seguir", follow_user_path(@user), method: :post %>
-        <% else %>
-          <%= link_to "Dejar de seguir", unfollow_user_path(@user), method: :delete %>
+        <%= image_tag(@user&.avatar_url.presence || 'notfoundimg.jpg', class: "w-24 h-24 rounded-full mr-4 mt-4") %>
+        <h1> <%= @user&.username %></h1>
+        <h1> <%= @user&.name%> <%= @user&.secondname%></h1>
+        <h1> <%= @user&.biography %></h1>
+        <% if current_user != @user %>
+          <% if current_user.followed_users.include?(@user) %>
+            <%= button_to "Dejar de seguir", unfollow_path(@user.username),method: :delete, data: {turbo_method: :delete}, class: "bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded-full inline-block" %>
+          <% else %>
+            <%= button_to "Seguir", follow_path(@user.username), data: {turbo_method: :post} , class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" %>
+          <% end %>
         <% end %>
-      <% end %>
     </div>
     <div class="flex justify-between followers mt-2 mb-3">
       <div class="flex justify-start">
         <h2>Publicaciones: </h2>
-          <p><%= @user.posts.count %></p>
+          <p><%= @user.posts.size %></p>
         </div>
       <div class="flex justify-start">
         <h2>Seguidores:</h2>
-        <%= @user.followers.count %>
-        <% @user.followers.each do |follower| %>
+        <%= @followers.size %>
+        <!--<% @followers.each do |follower| %>
           <p><%= link_to follower.username, user_path(follower) %></p>
-        <% end %>
+        <% end %>-->
       </div>
       <div class="flex justify-end">
         <h2>Siguiendo:</h2>
-        <%= @user.followed_users.count %>
-        <% @user.followed_users.each do |followed| %>
+        <%= @followed_users.count %>
+        <!--<% @followed_users.each do |followed| %>
           <p><%= link_to followed.username, user_path(followed) %></p>
-        <% end %>
+        <% end %>-->
       </div>
     </div>
   </div>
@@ -53,4 +55,8 @@
       </li>
     <% end %>
   </ul>
+</div>
+<div class="w-full text-white lg:w-[400px]">
+  <h1>Sugerencias</h1>
+  <%= render 'shared/suggestions' %>
 </div>
