--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,21 +1,21 @@
 <div class="pl-72">
-  <h2>Sign up</h2>
+  <h2 class="text-white" >Sign up</h2>
   
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
   
       <div class="field">
-        <%= f.label :email %><br />
+        <%= f.label :email, class:"text-white"  %><br />
         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
       </div>
   
       <div class="field">
-        <%= f.label :username %><br />
-        <%= f.text_field :username, autofocus: true %>
+        <%= f.label :username,class:"text-white" %><br />
+        <%= f.text_field :username, autofocus: true, autocomplete: "username" %>
       </div>
   
       <div class="field">
-        <%= f.label :password %>
+        <%= f.label :password, class:"text-white"  %>
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br />
@@ -23,7 +23,7 @@
       </div>
   
       <div class="field">
-        <%= f.label :password_confirmation %><br />
+        <%= f.label :password_confirmation, class:"text-white"  %><br />
         <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
       </div>
   
