--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,5 +1,5 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <%= link_to "Log in", new_session_path(resource_name), class:"text-white" %><br />
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
@@ -23,8 +23,9 @@
     <%= form_for "Login",
     url: omniauth_authorize_path(resource_name, provider),
     method: :post,
+    class: "mt-4" ,
     data: {turbo: "false"} do |f| %>
-        <%= f.submit "Login", type:"image", src: url_for("/assets/btn_google_signin_light_normal_web.png") %><br />
+        <%= f.submit "Login", type:"image",class:"text-white", src: url_for("/assets/btn_google_signin_dark_normal_web.png") %><br />
     <% end %>
   <% end %>
 <% end %>
