--- a/app/views/posts/_likes.html.erb
+++ b/app/views/posts/_likes.html.erb
@@ -1,9 +1,17 @@
-<%  unless action_name == "index"%>
-    <% if @post.like(current_user) %>
-        <%= button_to "❤", like_path(post_id: @post.id), method: :delete, data: {turbo_method: :delete}, class:"text-white"%>
-        <p class="text-white"><%= @post.likes.count%> Les gusta</p>
-    <% else %>
-        <%= button_to "♡", likes_path(post_id: @post.id), data: {turbo_method: :post} , class:"text-white"%>
-        <p class="text-white"><%= @post.likes.count%></p>
-    <% end %>
-<% end %>
+<div class="flex items-center justify-between text-white">
+    <div>
+        <%  unless action_name == "index"%>
+            <% if @post.like(current_user) %>
+                <%= button_to "❤", like_path(post_id: @post.id), method: :delete, data: {turbo_method: :delete}%>
+                <p class="text-white"><%= @post.likes.count%> Les gusta</p>
+            <% else %>
+                <%= button_to "♡", likes_path(post_id: @post.id), data: {turbo_method: :post} , class:"text-white"%>
+                <p class="text-white"><%= @post.likes.count%></p>
+            <% end %>
+        <% end %>
+    </div>
+    <div class="cursor-pointer">
+        <i class="fa-regular fa-comment "></i>
+        <%= @post.comments.count %>
+    </div>
+</div>
