--- a/app/views/shared/_items.html.erb
+++ b/app/views/shared/_items.html.erb
@@ -1,7 +1,7 @@
 <div class="w-full text-white ">
     <div class=" flex justify-between text-left items-center text-white text-2xl" >
         <% if current_user %>
-            <%= image_tag current_user.avatar_url ? current_user.avatar_url : 'notfoundimg.jpg', class: "w-10 h-10 rounded-full " %>
+            <%= image_tag current_user.avatar_url.presence || "notfoundimg.jpg" , class: "w-10 h-10 rounded-full " %>
             <%= link_to new_post_path do %>
                 <i class="fa-solid fa-plus cursor-pointer "></i>
             <% end %>
