--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 <% if @users.any? %>
     <% @users.each do |user| %>
       <%= link_to user_profile_path(user.username) do %>
-        <%= image_tag(user.avatar_url ? user.avatar_url : 'notfoundimg.jpg', class: "w-10 h-10 rounded-full mr-4 mt-4") %>
+        <%= image_tag(user.avatar_url.presence || "notfoundimg.jpg", class: "w-10 h-10 rounded-full mr-4 mt-4") %>
         <span class="text-white"><%= t('.view_profile', username: user.username) %></span>
       <% end %>
       <hr class="mt-6">
